[gd_scene load_steps=65 format=3 uid="uid://r30h8gkmrmxn"]

[ext_resource type="Script" path="res://Players.gd" id="1_pjh52"]
[ext_resource type="Texture2D" uid="uid://bw4darxqve365" path="res://Sprites/Sword 01.png" id="3_4evsy"]
[ext_resource type="Texture2D" uid="uid://6wqok7y684co" path="res://Sprites/Hero 01.png" id="3_os56y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_53trd"]
size = Vector2(14.3125, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_nf1ik"]
atlas = ExtResource("3_os56y")
region = Rect2(80, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_41t0v"]
atlas = ExtResource("3_os56y")
region = Rect2(112, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua0oy"]
atlas = ExtResource("3_os56y")
region = Rect2(16, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0sdw"]
atlas = ExtResource("3_os56y")
region = Rect2(48, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hn0e"]
atlas = ExtResource("3_os56y")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rs6yb"]
atlas = ExtResource("3_os56y")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dr4qi"]
atlas = ExtResource("3_os56y")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifrvj"]
atlas = ExtResource("3_os56y")
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnhmx"]
atlas = ExtResource("3_os56y")
region = Rect2(0, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_soj2a"]
atlas = ExtResource("3_os56y")
region = Rect2(16, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjcn5"]
atlas = ExtResource("3_os56y")
region = Rect2(32, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2hw7"]
atlas = ExtResource("3_os56y")
region = Rect2(48, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbqsv"]
atlas = ExtResource("3_os56y")
region = Rect2(0, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmy15"]
atlas = ExtResource("3_os56y")
region = Rect2(16, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_smsn8"]
atlas = ExtResource("3_os56y")
region = Rect2(32, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4x5j"]
atlas = ExtResource("3_os56y")
region = Rect2(48, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gq40"]
atlas = ExtResource("3_os56y")
region = Rect2(0, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3y6r"]
atlas = ExtResource("3_os56y")
region = Rect2(16, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wvd2"]
atlas = ExtResource("3_os56y")
region = Rect2(32, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4qe2"]
atlas = ExtResource("3_os56y")
region = Rect2(48, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcry5"]
atlas = ExtResource("3_os56y")
region = Rect2(0, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_joggv"]
atlas = ExtResource("3_os56y")
region = Rect2(32, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5s4i"]
atlas = ExtResource("3_os56y")
region = Rect2(64, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iq3p6"]
atlas = ExtResource("3_os56y")
region = Rect2(96, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_80kqe"]
atlas = ExtResource("3_os56y")
region = Rect2(64, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ds0n"]
atlas = ExtResource("3_os56y")
region = Rect2(80, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2iku"]
atlas = ExtResource("3_os56y")
region = Rect2(96, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iu5sh"]
atlas = ExtResource("3_os56y")
region = Rect2(112, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jf1k"]
atlas = ExtResource("3_os56y")
region = Rect2(64, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r78en"]
atlas = ExtResource("3_os56y")
region = Rect2(80, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ks02"]
atlas = ExtResource("3_os56y")
region = Rect2(96, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci3cu"]
atlas = ExtResource("3_os56y")
region = Rect2(112, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4i4n"]
atlas = ExtResource("3_os56y")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_via0y"]
atlas = ExtResource("3_os56y")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ih4yc"]
atlas = ExtResource("3_os56y")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kme88"]
atlas = ExtResource("3_os56y")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2om8"]
atlas = ExtResource("3_os56y")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3c8nb"]
atlas = ExtResource("3_os56y")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4qf1"]
atlas = ExtResource("3_os56y")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_laek3"]
atlas = ExtResource("3_os56y")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_04cyk"]
atlas = ExtResource("3_os56y")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddg7g"]
atlas = ExtResource("3_os56y")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ag7ql"]
atlas = ExtResource("3_os56y")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nx6mt"]
atlas = ExtResource("3_os56y")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpox7"]
atlas = ExtResource("3_os56y")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uasnq"]
atlas = ExtResource("3_os56y")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwiho"]
atlas = ExtResource("3_os56y")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1s61"]
atlas = ExtResource("3_os56y")
region = Rect2(48, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_3k81e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nf1ik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41t0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua0oy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0sdw")
}],
"loop": false,
"name": &"left_attack",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hn0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rs6yb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dr4qi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifrvj")
}],
"loop": true,
"name": &"move_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnhmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_soj2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjcn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2hw7")
}],
"loop": true,
"name": &"move_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbqsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmy15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smsn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4x5j")
}],
"loop": true,
"name": &"move_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gq40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3y6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wvd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4qe2")
}],
"loop": true,
"name": &"move_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcry5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_joggv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5s4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iq3p6")
}],
"loop": false,
"name": &"right_attack",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_80kqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ds0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2iku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iu5sh")
}],
"loop": false,
"name": &"slide_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jf1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r78en")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ks02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ci3cu")
}],
"loop": false,
"name": &"slide_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4i4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_via0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ih4yc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kme88")
}],
"loop": true,
"name": &"standing_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2om8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3c8nb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4qf1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_laek3")
}],
"loop": true,
"name": &"standing_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_04cyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddg7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ag7ql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nx6mt")
}],
"loop": true,
"name": &"standing_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpox7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uasnq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwiho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1s61")
}],
"loop": true,
"name": &"standing_up",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_q5i6r"]
atlas = ExtResource("3_4evsy")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b24cq"]
atlas = ExtResource("3_4evsy")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdg44"]
atlas = ExtResource("3_4evsy")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_htc5j"]
atlas = ExtResource("3_4evsy")
region = Rect2(96, 224, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_m5cl3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5i6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b24cq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdg44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htc5j")
}],
"loop": false,
"name": &"default",
"speed": 6.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_bbd75"]
atlas = ExtResource("3_4evsy")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt7ud"]
atlas = ExtResource("3_4evsy")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuc4g"]
atlas = ExtResource("3_4evsy")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vg6gu"]
atlas = ExtResource("3_4evsy")
region = Rect2(96, 192, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hw45j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbd75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt7ud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuc4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vg6gu")
}],
"loop": false,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5ellc"]
radius = 6.0
height = 14.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_pjh52")

[node name="HitBoxs" type="Area2D" parent="." groups=["Sword"]]

[node name="Attack Box Right" type="CollisionShape2D" parent="HitBoxs"]
position = Vector2(7, 0)
shape = SubResource("RectangleShape2D_53trd")
disabled = true

[node name="Attack Box Left" type="CollisionShape2D" parent="HitBoxs"]
position = Vector2(-7, 0)
shape = SubResource("RectangleShape2D_53trd")
disabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3k81e")
animation = &"slide_right"

[node name="left_sword" type="AnimatedSprite2D" parent="AnimatedSprite2D"]
visible = false
show_behind_parent = true
position = Vector2(-8, 0)
sprite_frames = SubResource("SpriteFrames_m5cl3")

[node name="right_sword" type="AnimatedSprite2D" parent="AnimatedSprite2D"]
visible = false
show_behind_parent = true
position = Vector2(8, 0)
sprite_frames = SubResource("SpriteFrames_hw45j")
frame = 3
frame_progress = 1.0

[node name="Area2D" type="Area2D" parent="." groups=["Player"]]

[node name="HitBox" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_5ellc")

[node name="HitBox" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_5ellc")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
